topnav bottomnav and footer completed

--- a/src/lang/az.json
+++ b/src/lang/az.json
@@ -64,10 +64,10 @@
 
     "menu": "menyular",
     "categories": "kateqoriyalar",
-    "adresses": "ünvanlarımız",
+    "addresses": "ünvanlarımız",
     "head-office": "baş ofis",
-    "factory-adress": "fabrik ünvanı",
-    "useful-links": "faydalı linlər",
+    "factory-address": "fabrik ünvanı",
+    "useful-links": "faydalı linklər",
     "faq": "tez-tez soruşulanlar",
     "career": "karyera",
     "service-network": "xidmət şəbəkəsi",
