--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -64,9 +64,9 @@
 
     "menu": "menu",
     "categories": "categories",
-    "adresses": "adresses",
+    "addresses": "adresses",
     "head-office": "head office",
-    "factory-adress": "factory adress",
+    "factory-address": "factory adress",
     "useful-links": "useful links",
     "faq": "F.A.Q",
     "career": "career",
