--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -64,9 +64,9 @@
 
     "menu": "Меню",
     "categories": "Категории",
-    "adresses": "Адреса",
+    "addresses": "Адреса",
     "head-office": "Главный офис",
-    "factory-adress": "Адрес завода",
+    "factory-address": "Адрес завода",
     "useful-links": "Полезные ссылки",
     "faq": "Часто задаваемые вопросы",
     "career": "Карьера",
