product card completed

--- a/src/lang/az.json
+++ b/src/lang/az.json
@@ -61,7 +61,7 @@
     "powered-by": "Hazırladı",
     "add-basket": "Səbətə at",
     "comparison": "Müqayisə",
-    "stock": "anbarda",
+    "stock": "Anbarda",
     "offered": "Təklif olunan",
     "new": "Yeni",
     "pieces": "ədəd",
