--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -60,8 +60,8 @@
     "all-rights-reserved": "All rights reserved",
     "powered-by": "powered by",
     "add-basket": "Add to basket",
-    "comparison": "comparison",
-    "stock": "stock",
+    "comparison": "Comparison",
+    "stock": "Stock",
     "offered": "offered",
     "new": "new",
     "pieces": "pieces",
