--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -60,7 +60,7 @@
     "all-rights-reserved": "Все права защищены.",
     "powered-by": "Работает на",
     "add-basket": "Добавить в корзину",
-    "comparison": "сравнение",
+    "comparison": "Сравнение",
     "stock": "Склад",
     "offered": "предложенный",
     "new": "новый",
